Move getopt from libmare to mare

--- a/VS2010/mare.vcxproj
+++ b/VS2010/mare.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="..\src\mare\Builder.cpp" />
     <ClCompile Include="..\src\mare\Main.cpp" />
     <ClCompile Include="..\src\mare\Tools\md5.cpp" />
+    <ClCompile Include="..\src\mare\Tools\Win32\getopt.cpp" />
     <ClCompile Include="..\src\mare\Vcxproj.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -24,6 +25,7 @@
   <ItemGroup>
     <ClInclude Include="..\src\mare\Builder.h" />
     <ClInclude Include="..\src\mare\Tools\md5.h" />
+    <ClInclude Include="..\src\mare\Tools\Win32\getopt.h" />
     <ClInclude Include="..\src\mare\Vcxproj.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
