Add support for conditional blocks

--- a/VS2010/libmare.vcxproj
+++ b/VS2010/libmare.vcxproj
@@ -28,6 +28,7 @@
     <ClInclude Include="..\src\libmare\Namespace.h" />
     <ClInclude Include="..\src\libmare\Parser.h" />
     <ClInclude Include="..\src\libmare\Statement.h" />
+    <ClInclude Include="..\src\libmare\Token.h" />
     <ClInclude Include="..\src\libmare\Tools\Array.h" />
     <ClInclude Include="..\src\libmare\Tools\Directory.h" />
     <ClInclude Include="..\src\libmare\Tools\Error.h" />
