win32: Use /MT in Release configuration

--- a/VS2010/libmare.vcxproj
+++ b/VS2010/libmare.vcxproj
@@ -94,6 +94,7 @@
       <FloatingPointModel>Fast</FloatingPointModel>
       <StringPooling>true</StringPooling>
       <BufferSecurityCheck>false</BufferSecurityCheck>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
