--- a/VS2010/mare.vcxproj
+++ b/VS2010/mare.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\mare\CMake.cpp" />
     <ClCompile Include="..\src\mare\CodeBlocks.cpp" />
     <ClCompile Include="..\src\mare\CodeLite.cpp" />
     <ClCompile Include="..\src\mare\Main.cpp" />
@@ -26,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\mare\Mare.h" />
+    <ClInclude Include="..\src\mare\CMake.h" />
     <ClInclude Include="..\src\mare\CodeBlocks.h" />
     <ClInclude Include="..\src\mare\CodeLite.h" />
     <ClInclude Include="..\src\mare\Tools\md5.h" />
