--- a/VS2010/mare.vcxproj
+++ b/VS2010/mare.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\mare\Builder.cpp" />
     <ClCompile Include="..\src\mare\Main.cpp" />
+    <ClCompile Include="..\src\mare\Mare.cpp" />
     <ClCompile Include="..\src\mare\Tools\md5.cpp" />
     <ClCompile Include="..\src\mare\Tools\Win32\getopt.cpp" />
     <ClCompile Include="..\src\mare\Vcxproj.cpp" />
@@ -23,7 +23,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\mare\Builder.h" />
+    <ClInclude Include="..\src\mare\Mare.h" />
     <ClInclude Include="..\src\mare\Tools\md5.h" />
     <ClInclude Include="..\src\mare\Tools\Win32\getopt.h" />
     <ClInclude Include="..\src\mare\Vcxproj.h" />
