Repair visual studio project

--- a/VS2010/mare.vcxproj.filters
+++ b/VS2010/mare.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClCompile Include="..\src\mare\CodeBlocks.cpp" />
     <ClCompile Include="..\src\mare\CMake.cpp" />
     <ClCompile Include="..\src\mare\Make.cpp" />
+    <ClCompile Include="..\src\mare\NetBeans.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\mare\Vcxproj.h" />
@@ -28,6 +29,7 @@
     <ClInclude Include="..\src\mare\CodeBlocks.h" />
     <ClInclude Include="..\src\mare\CMake.h" />
     <ClInclude Include="..\src\mare\Make.h" />
+    <ClInclude Include="..\src\mare\NetBeans.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Tools">
