Add vcproj generator

--- a/VS2010/mare.vcxproj.filters
+++ b/VS2010/mare.vcxproj.filters
@@ -15,6 +15,7 @@
     <ClCompile Include="..\src\mare\CMake.cpp" />
     <ClCompile Include="..\src\mare\Make.cpp" />
     <ClCompile Include="..\src\mare\NetBeans.cpp" />
+    <ClCompile Include="..\src\mare\Vcproj.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\mare\Vcxproj.h" />
@@ -30,6 +31,7 @@
     <ClInclude Include="..\src\mare\CMake.h" />
     <ClInclude Include="..\src\mare\Make.h" />
     <ClInclude Include="..\src\mare\NetBeans.h" />
+    <ClInclude Include="..\src\mare\Vcproj.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Tools">
