--- a/VS2010/mare.vcxproj
+++ b/VS2010/mare.vcxproj
@@ -20,6 +20,7 @@
     <ClCompile Include="..\src\mare\NetBeans.cpp" />
     <ClCompile Include="..\src\mare\Tools\md5.cpp" />
     <ClCompile Include="..\src\mare\Tools\Win32\getopt.cpp" />
+    <ClCompile Include="..\src\mare\Vcproj.cpp" />
     <ClCompile Include="..\src\mare\Vcxproj.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -36,6 +37,7 @@
     <ClInclude Include="..\src\mare\NetBeans.h" />
     <ClInclude Include="..\src\mare\Tools\md5.h" />
     <ClInclude Include="..\src\mare\Tools\Win32\getopt.h" />
+    <ClInclude Include="..\src\mare\Vcproj.h" />
     <ClInclude Include="..\src\mare\Vcxproj.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
